Fixed a few links, also added octocat

--- a/index.html
+++ b/index.html
@@ -15,10 +15,23 @@
         .nes-progress {
             height: 20px;
         }
+
+        .github-link {
+            position: fixed;
+            bottom: 40px;
+            right: 5px;
+            z-index: 999;
+            display: flex;
+            height: 60px;
+            color: #333;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            font-size: 50%;
+        }
     </style>
 </head>
 <body>
-        <nav style='padding: 20px; border-bottom: 3px solid #ccc; margin-bottom: 60px;'>
+        <nav style='padding: 20px; border-bottom: 5px solid #ccc; margin-bottom: 30px;'>
         <div class="container">
                 <h2 style='margin-bottom: 0;'>
                           Jasmeet Singh</h2>
@@ -27,8 +40,12 @@
                     jasmeetsinghbhatia@gmail.com
                 </p>
         </div>
+        <a href="https://github.com/jasmeetsinghbhatia/resume" target="_blank" rel="noopener" class="github-link active">
+            <p class="nes-balloon is-success from-right" style="font-size: 90%; margin-bottom: 0px;">Fork this<br>on GitHub</p> 
+            <i class="nes-octocat animate" style="margin-top: 30px;"></i>
+        </a>
         </nav>
-        <div class="container" style="margin-bottom: 50px;">
+        <div class="container" style="margin-bottom: 5px;">
             <div class="row">
                 
                 <div class="col-md-10">
@@ -62,7 +79,7 @@
                     <div class="nes-container with-title" style="margin-bottom: 10px;">
                         <h3 class="title">Education</h3>
                         <div>
-                                <a href="#" class="nes-badge is-icon">
+                                <a href="https://www.bits-pilani.ac.in/" class="nes-badge is-icon">
                                         <span class="is-success">9.2</span>
                                         <span>Master of Science (2014) <br>
                                             - BITS, Pilani-India</span>
@@ -71,7 +88,7 @@
                         </div>
                         <br>
                         <div>
-                                <a href="#" class="nes-badge is-icon">
+                                <a href="http://www.jiit.ac.in/" class="nes-badge is-icon">
                                         <span class="is-success">7.8</span>
                                         <span>Bachelor of Technology (2009) <br>
                                             - JIITU, Noida-India</span>
@@ -82,9 +99,9 @@
                     <div class="nes-container with-title" style="margin-bottom: 10px">
                         <h3 class="title">Connect with me</h3>
                             <div>
-                                <a href="#"><i class="nes-icon linkedin"></i></a>
-                                <a href="#"><i class="nes-icon github"></i></a>
-                                <a href="#"><i class="nes-icon gmail"></i></a>
+                                <a href="https://www.linkedin.com/in/jasmeetsinghbhatia/"><i class="nes-icon linkedin"></i></a>
+                                <a href="https://github.com/jasmeetsinghbhatia"><i class="nes-icon github"></i></a>
+                                <a href="mailto:jasmeetsinghbhatia@gmail.com"><i class="nes-icon gmail"></i></a>
                             </div>
                     </div>
                     <div class="nes-container with-title">
