updated my SAP timeline and role headline

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                                     <div class="col-xs-10">
                                         <ul class="nes-list">
                                             <li>SAP</li>
-                                            <li>Sr Software Engineer(Quality)</li>
-                                            <li>2019-today</li>
+                                            <li>Sr Software Engineer(CI/CD and Release)</li>
+                                            <li>Jul2019-Today</li>
                                         </ul>
                                     </div>
                                 </div>
