Added K8s as a skill to the list

--- a/index.html
+++ b/index.html
@@ -202,15 +202,21 @@
                                 </div>
                         </div>
                         <div class="row">
+                                <div class="col-sm-4 col-xs-12">Kubernetes</div>
+                                <div class="col-sm-8 col-xs-12">
+                                        <progress class="nes-progress progress is-warning" value="8" max="100"></progress>
+                                    </div>
+                            </div>
+                        <div class="row">
                                 <div class="col-sm-4 col-xs-12">Docker</div>
                                 <div class="col-sm-8 col-xs-12">
-                                        <progress class="nes-progress progress is-warning" value="6" max="100"></progress>
+                                        <progress class="nes-progress progress is-warning" value="8" max="100"></progress>
                                     </div>
                             </div>
                             <div class="row">
                                     <div class="col-sm-4 col-xs-12">Git</div>
                                     <div class="col-sm-8 col-xs-12">
-                                            <progress class="nes-progress progress is-success" value="8.5" max="100"></progress>
+                                            <progress class="nes-progress progress is-success" value="10" max="100"></progress>
                                         </div>
                                 </div>
                     </div>
