--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
                         <div class="row">
                                 <div class="col-sm-4 col-xs-12">Kubernetes</div>
                                 <div class="col-sm-8 col-xs-12">
-                                        <progress class="nes-progress progress is-warning" value="8" max="100"></progress>
+                                        <progress class="nes-progress progress is-success" value="8" max="100"></progress>
                                     </div>
                             </div>
                         <div class="row">
                                 <div class="col-sm-4 col-xs-12">Docker</div>
                                 <div class="col-sm-8 col-xs-12">
-                                        <progress class="nes-progress progress is-warning" value="8" max="100"></progress>
+                                        <progress class="nes-progress progress is-success" value="8.5" max="100"></progress>
                                     </div>
                             </div>
                             <div class="row">
