added highlight and new image with url + gitignore that was missed previously

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <a href="https://github.com/jasmeetsinghbhatia/resume" target="_blank" rel="noopener" class="github-link active">
             <p class="nes-balloon is-success from-right" style="font-size: 90%; margin-bottom: 0px;">Fork this<br>on GitHub</p> 
-            <i class="nes-octocat animate" style="margin-top: 30px;"></i>
+            <i class="nes-octocat animate" style="margin-top: 10px;"></i>
         </a>
         </nav>
         <div class="container" style="margin-bottom: 5px;">
@@ -283,5 +283,10 @@
         </div>
 
         <script src="main.js"></script>
+        <script>
+            var googleSheetUrl="https://docs.google.com/spreadsheets/d/1kj4VXPHVBrdnVT5GIqLGbcU2uKfBZ8iZ9Jer6aX7Wgs/edit?usp=sharing";
+            var highlightlicence ="test"; // optional
+        </script>
+        <script src="https://usehighlight.com/highlight-script.js?v9"></script>        
 </body>
 </html>
