added js as a skill

--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-sm-4 col-xs-12">Javascript</div>
+                            <div class="col-sm-8 col-xs-12">
+                                <progress class="nes-progress progress is-success" value="8" max="100"></progress>
+                            </div>
+                        </div>
+                        <div class="row">
                                 <div class="col-sm-4 col-xs-12">Python</div>
                                 <div class="col-sm-8 col-xs-12">
                                     <progress class="nes-progress progress is-success" value="7.5" max="100"></progress>
