--- a/index.html
+++ b/index.html
@@ -230,13 +230,25 @@
                             <h3 class="title"><i class="nes-icon star"></i> Work Experience </h3>
                             <div class="row">
                                     <div class="col-xs-1">
+                                        <img src="https://user-images.githubusercontent.com/5153163/147995666-ba5a5453-3b97-4702-9cbe-8b2b9ed87571.png" alt="Netskope">
+                                    </div>
+                                    <div class="col-xs-10">
+                                        <ul class="nes-list">
+                                            <li>Netskope</li>
+                                            <li>Staff Software Engineer(productivity)</li>
+                                            <li>Aug2021-Today</li>
+                                        </ul>
+                                    </div>
+                            </div>
+                            <div class="row">
+                                    <div class="col-xs-1">
                                         <img src="https://user-images.githubusercontent.com/5153163/66262843-6ec55100-e7b6-11e9-9448-62d7209b1b3c.png" alt="SAP">
                                     </div>
                                     <div class="col-xs-10">
                                         <ul class="nes-list">
                                             <li>SAP</li>
                                             <li>Sr Software Engineer(CI/CD and Release)</li>
-                                            <li>Jul2019-Today</li>
+                                            <li>Jul2019-Aug2021</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -251,7 +263,7 @@
                                             <li>Apr2018-Jul2019</li>
                                         </ul>
                                     </div>
-                                </div>
+                             </div>
                         <div class="row">
                             <div class="col-xs-1">
                                 <img src="https://user-images.githubusercontent.com/5153163/66262841-6ec55100-e7b6-11e9-973e-a444727fb8c7.png" alt="LinkedIn">
