update latest experience timeline

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                         <ul class="nes-list">
                                             <li>Netskope</li>
                                             <li>Staff Software Engineer(productivity)</li>
-                                            <li>Aug2021-Today</li>
+                                            <li>Aug2021-Apr2022</li>
                                         </ul>
                                     </div>
                             </div>
