--- a/index.html
+++ b/index.html
@@ -169,12 +169,6 @@
                     <div class="nes-container with-title" style="margin-bottom: 20px; margin-top: 2px;">
                         <h3 class="title">Core Skills</h3>
                         <div class="row">
-                            <div class="col-sm-4 col-xs-12">Java</div>
-                            <div class="col-sm-8 col-xs-12">
-                                <progress class="nes-progress progress is-success" value="8" max="100"></progress>
-                            </div>
-                        </div>
-                        <div class="row">
                             <div class="col-sm-4 col-xs-12">Javascript</div>
                             <div class="col-sm-8 col-xs-12">
                                 <progress class="nes-progress progress is-success" value="8" max="100"></progress>
@@ -185,34 +179,40 @@
                                 <div class="col-sm-8 col-xs-12">
                                     <progress class="nes-progress progress is-success" value="7.5" max="100"></progress>
                                 </div>
-                            </div>
+                        </div>
                             <div class="row">
-                                    <div class="col-sm-4 col-xs-12">Selenium</div>
-                                    <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
-                                        <progress class="nes-progress progress is-success" value="8.5" max="100"></progress>
-                                    </div>
+                                <div class="col-sm-4 col-xs-12">Golang</div>
+                                <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
+                                    <progress class="nes-progress progress is-success" value="7.5" max="100"></progress>
                                 </div>
-                                <div class="row">
-                                        <div class="col-sm-4 col-xs-12">Jenkins</div>
-                                        <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
-                                            <progress class="nes-progress progress is-success" value="9" max="100"></progress>
-                                        </div>
-                                    </div>
-                    </div>
-                    <div class="nes-container is-dark with-title" style="margin-bottom: 20px;"> 
-                        <h3 class="title">Other Tools and Frameworks</h3>
+                            </div>
                         <div class="row">
-                            <div class="col-sm-4 col-xs-12">Junit</div>
+                            <div class="col-sm-4 col-xs-12">Github Actions</div>
                             <div class="col-sm-8 col-xs-12">
-                                    <progress class="nes-progress progress is-success" value="9" max="100"></progress>
-                                </div>
+                                <progress class="nes-progress progress is-success" value="9" max="100"></progress>
+                            </div>
                         </div>
                         <div class="row">
-                                <div class="col-sm-4 col-xs-12">Kubernetes</div>
-                                <div class="col-sm-8 col-xs-12">
-                                        <progress class="nes-progress progress is-success" value="8" max="100"></progress>
-                                    </div>
+                            <div class="col-sm-4 col-xs-12">Jenkins</div>
+                            <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
+                                <progress class="nes-progress progress is-success" value="8" max="100"></progress>
                             </div>
+                        </div>
+                        </div>
+                        <div class="nes-container is-dark with-title" style="margin-bottom: 20px;"> 
+                        <h3 class="title">Other Tools and Frameworks</h3>
+                        <div class="row">
+                            <div class="col-sm-4 col-xs-12">DataDog</div>
+                            <div class="col-sm-8 col-xs-12">
+                                <progress class="nes-progress progress is-success" value="8" max="100"></progress>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4 col-xs-12">Kubernetes</div>
+                            <div class="col-sm-8 col-xs-12">
+                                <progress class="nes-progress progress is-success" value="7" max="100"></progress>
+                            </div>
+                        </div>
                         <div class="row">
                                 <div class="col-sm-4 col-xs-12">Docker</div>
                                 <div class="col-sm-8 col-xs-12">
