added movie app and replaced it with python flask app under projects

--- a/index.html
+++ b/index.html
@@ -146,22 +146,21 @@
                                               <div class="nes-badge">
                                                     <span class="is-error">gdax api</span>
                                               </div>
-                                </div>
-                                <div class="col-xs-12" style="margin-bottom: 10px">
+                            </div>
+                            <div class="col-xs-12" style="margin-bottom: 10px">
                                     <div>
-                                        <a href="https://github.com/jasmeetsinghbhatia/RestAPI-with-flask" target="_blank">
+                                        <a href="https://github.com/jasmeetsinghbhatia/movie-app" target="_blank">
                                             <div class="nes-icon github"></div>
-                                            Rest API with Flask
+                                            Movie App in React
                                         </a>
                                     </div>   
                                     <div class="nes-badge">
-                                                <span class="is-success">python</span>
-                                        </div>
-                                              <div class="nes-badge">
-                                                    <span class="is-dark">flask</span>
-                                              </div>
-                                                  
+                                                <span class="is-success">react</span>
                                     </div>
+                                    <div class="nes-badge">
+                                        <span class="is-primary">javascript</span>
+                                    </div>              
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -199,7 +198,7 @@
                             </div>
                         </div>
                         </div>
-                        <div class="nes-container is-dark with-title" style="margin-bottom: 20px;"> 
+                        <div class="nes-container with-title" style="margin-bottom: 20px;"> 
                         <h3 class="title">Other Tools and Frameworks</h3>
                         <div class="row">
                             <div class="col-sm-4 col-xs-12">DataDog</div>
