--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 
                 <div class="col-md-10">
                     <div class="nes-balloon from-right">
-                        <p>Hi Visitor, I am Jasmeet and here is everything about me <i class="nes-icon is-small heart"></i></p>
+                        <p>Hi There, I am Jasmeet and here is my resume.<br>If you want to hire me, please reach out to me <i class="nes-icon is-small heart"></i></p>
                     </div>
                 </div>
                 <div class="col-md-1">
