--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <div class="container" style="margin-bottom: 5px;">
             <div class="row">
                 
-                <div class="col-md-12">
+                <div class="col-md-10" style="margin-left: 5px;">
                     <div class="nes-balloon from-right">
                         <p>Hi There, I am Jasmeet and here is my resume.<br>If you want to hire me, please reach out to me <i class="nes-icon is-small heart"></i></p>
                     </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-2">
                         <img src="https://user-images.githubusercontent.com/5153163/66262814-cdd69600-e7b5-11e9-9eca-0db733b699be.png" alt="Jasmeet Singh">
                     </div>
             </div>
