--- a/index.html
+++ b/index.html
@@ -229,6 +229,19 @@
                             <h3 class="title"><i class="nes-icon star"></i> Work Experience </h3>
                             <div class="row">
                                     <div class="col-xs-1">
+                                        <img src="https://github-production-user-asset-6210df.s3.amazonaws.com/5153163/247802517-a3de0ce4-1325-4347-b66e-33a543221198.png" alt="Hashicorp">
+                                    </div>
+                                    <div class="col-xs-10">
+                                        <ul class="nes-list">
+                                            <li>Hashicorp</li>
+                                            <li>Sr Software Engineer</li>
+                                            <li>Developer productivity</li>
+                                            <li>Apr2022-Today</li>
+                                        </ul>
+                                    </div>
+                            </div>
+                            <div class="row">
+                                    <div class="col-xs-1">
                                         <img src="https://user-images.githubusercontent.com/5153163/147995666-ba5a5453-3b97-4702-9cbe-8b2b9ed87571.png" alt="Netskope">
                                     </div>
                                     <div class="col-xs-10">
