--- a/index.html
+++ b/index.html
@@ -168,31 +168,31 @@
                     <div class="nes-container with-title" style="margin-bottom: 20px; margin-top: 2px;">
                         <h3 class="title">Core Skills</h3>
                         <div class="row">
-                            <div class="col-sm-4 col-xs-12">Javascript</div>
-                            <div class="col-sm-8 col-xs-12">
-                                <progress class="nes-progress progress is-success" value="8" max="100"></progress>
-                            </div>
-                        </div>
-                        <div class="row">
-                                <div class="col-sm-4 col-xs-12">Python</div>
-                                <div class="col-sm-8 col-xs-12">
-                                    <progress class="nes-progress progress is-success" value="7.5" max="100"></progress>
-                                </div>
-                        </div>
-                            <div class="row">
-                                <div class="col-sm-4 col-xs-12">Golang</div>
-                                <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
-                                    <progress class="nes-progress progress is-success" value="7.5" max="100"></progress>
-                                </div>
-                            </div>
-                        <div class="row">
-                            <div class="col-sm-4 col-xs-12">Github Actions</div>
+                            <div class="col-sm-4 col-xs-12">Golang</div>
                             <div class="col-sm-8 col-xs-12">
                                 <progress class="nes-progress progress is-success" value="9" max="100"></progress>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-4 col-xs-12">Jenkins</div>
+                                <div class="col-sm-4 col-xs-12">Python</div>
+                                <div class="col-sm-8 col-xs-12">
+                                    <progress class="nes-progress progress is-success" value="8" max="100"></progress>
+                                </div>
+                        </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-xs-12">CI/CD</div>
+                                <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
+                                    <progress class="nes-progress progress is-success" value="8.5" max="100"></progress>
+                                </div>
+                            </div>
+                        <div class="row">
+                            <div class="col-sm-4 col-xs-12">Developer Experience</div>
+                            <div class="col-sm-8 col-xs-12">
+                                <progress class="nes-progress progress is-success" value="9" max="100"></progress>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4 col-xs-12">Build & Releases</div>
                             <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
                                 <progress class="nes-progress progress is-success" value="8" max="100"></progress>
                             </div>
@@ -200,7 +200,13 @@
                         </div>
                         <div class="nes-container with-title" style="margin-bottom: 20px;"> 
                         <h3 class="title">Other Tools and Frameworks</h3>
-                        <div class="row">
+                            <div class="row">
+                            <div class="col-sm-4 col-xs-12">Terraform</div>
+                            <div class="col-sm-8 col-xs-12">
+                                <progress class="nes-progress progress is-success" value="8" max="100"></progress>
+                            </div>
+                            </div>
+                            <div class="row">
                             <div class="col-sm-4 col-xs-12">DataDog</div>
                             <div class="col-sm-8 col-xs-12">
                                 <progress class="nes-progress progress is-success" value="8" max="100"></progress>
