Added script for collecting analytics data

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
             var googleSheetUrl="https://docs.google.com/spreadsheets/d/1uM33MhYwfBv7Rf727Yj109WUyDvNw-blSS5KWFxrVuU/edit?usp=sharing";
             var highlightlicence ="test"; // optional
         </script>
-        <script src="https://usehighlight.com/highlight-script.js?v9"></script>        
+        <script src="https://usehighlight.com/highlight-script.js?v9"></script>
+        <script defer data-domain="jasmeetsingh.is-a.dev" src="https://analytics.is-a.dev/js/script.js"></script>
 </body>
 </html>
