--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 
                 <div class="col-md-9" style="margin-left: 25px;">
                     <div class="nes-balloon from-right">
-                        <p>Hi There, I am Jasmeet and here is my resume.<br>If you want to hire me for DevOps/DevEx, please reach out <i class="nes-icon is-small heart"></i></p>
+                        <p>Hi There, I am Jasmeet and here is my resume.<br>If you want to hire me for DevOps or Developer Experience, please reach out <i class="nes-icon is-small heart"></i></p>
                     </div>
                 </div>
                 <div class="col-md-1">
