--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 </div>
                         </div>
                             <div class="row">
-                                <div class="col-sm-4 col-xs-12">CI/CD</div>
+                                <div class="col-sm-4 col-xs-12">Github Actions</div>
                                 <div class="col-sm-8 col-xs-12" style="transition: width 1s ease-in;">
                                     <progress class="nes-progress progress is-success" value="8.5" max="100"></progress>
                                 </div>
