adds the github action certification from credly

--- a/index.html
+++ b/index.html
@@ -216,14 +216,19 @@
           <div class="nes-container with-title" style="margin-bottom: 10px">
             <h3 class="title">Certifications</h3>
             <div
-              data-iframe-width="150"
+              data-iframe-width="125"
               data-iframe-height="270"
               data-share-badge-id="7dfe0497-95b6-4792-9efc-eafbcccd8a49"
             ></div>
             <div
-              data-iframe-width="150"
+              data-iframe-width="125"
               data-iframe-height="270"
               data-share-badge-id="42c31d16-13d3-44e0-9f2d-a81acf512e7c"
+            ></div>
+            <div
+              data-iframe-width="125"
+              data-iframe-height="270"
+              data-share-badge-id="231a0dc6-374d-48f3-b9a3-95a9909ff1c0"
             ></div>
             <script
               type="text/javascript"
