--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           <div class="nes-balloon from-right">
             <p>
               Hi There, I am Jasmeet and here is my resume.<br />If you want to
-              hire me for DevOps or Developer Experience, please reach out
-              <i class="nes-icon is-small heart"></i>
+              hire me for DevOps or Developer Experience positions, please reach
+              out.
             </p>
           </div>
         </div>
@@ -229,6 +229,11 @@
               data-iframe-width="125"
               data-iframe-height="270"
               data-share-badge-id="231a0dc6-374d-48f3-b9a3-95a9909ff1c0"
+            ></div>
+            <div
+              data-iframe-width="120"
+              data-iframe-height="270"
+              data-share-badge-id="4bb8f3db-d1c7-4eb3-aa48-72433024a48e"
             ></div>
             <script
               type="text/javascript"
