adds github advance security certification

--- a/index.html
+++ b/index.html
@@ -235,6 +235,11 @@
               data-iframe-height="270"
               data-share-badge-id="4bb8f3db-d1c7-4eb3-aa48-72433024a48e"
             ></div>
+            <div
+              data-iframe-width="150"
+              data-iframe-height="270"
+              data-share-badge-id="50c335c0-20d3-4592-beb6-6e800edf60ba"
+            ></div>
             <script
               type="text/javascript"
               async
@@ -348,7 +353,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-4 col-xs-12">Git</div>
+              <div class="col-sm-4 col-xs-12">Git/Github</div>
               <div class="col-sm-8 col-xs-12">
                 <progress
                   class="nes-progress progress is-success"
