Update job title and company description in index.html

--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
               </div>
               <div class="col-xs-10">
                 <ul class="nes-list">
-                  <li>Hashicorp</li>
+                  <li>Hashicorp(an IBM company)</li>
                   <li>Sr Software Engineer</li>
-                  <li>Developer productivity</li>
+                  <li>Platform Engineering</li>
                   <li>Apr2022-Today</li>
                 </ul>
               </div>
