Update job titles and roles in index.html

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
           <div class="nes-balloon from-right">
             <p>
               Hi There, I am Jasmeet and here is my resume.<br />If you want to
-              hire me for DevOps or Developer Experience positions, please reach
-              out.
+              hire me for Platform Engineering or Developer Experience positions, please reach out.
             </p>
           </div>
         </div>
@@ -391,7 +390,8 @@
               <div class="col-xs-10">
                 <ul class="nes-list">
                   <li>Netskope</li>
-                  <li>Staff Software Engineer(productivity)</li>
+                  <li>Staff Software Engineer</li>
+                  <li>Productivity Engineering</li>
                   <li>Aug2021-Apr2022</li>
                 </ul>
               </div>
@@ -406,7 +406,8 @@
               <div class="col-xs-10">
                 <ul class="nes-list">
                   <li>SAP</li>
-                  <li>Sr Software Engineer(CI/CD and Release)</li>
+                  <li>Sr Software Engineer</li>
+                  <li>CI/CD, Builds and Releases</li>
                   <li>Jul2019-Aug2021</li>
                 </ul>
               </div>
@@ -422,6 +423,7 @@
                 <ul class="nes-list">
                   <li>TextNow</li>
                   <li>Test Automation Lead</li>
+                  <li>Android and iOS apps</li>
                   <li>Apr2018-Jul2019</li>
                 </ul>
               </div>
@@ -437,6 +439,7 @@
                 <ul class="nes-list">
                   <li>LinkedIn</li>
                   <li>Sr Productivity Engineer</li>
+                  <li>Content Engineering</li>
                   <li>Oct2012-Mar2018</li>
                 </ul>
               </div>
